configs/internal/tdarr/configs/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - tdarr.home.burrell.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tdarr
          port: 8265

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr-redirect
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - tdarr.home.burrell.tech
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---

apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: tdarr-whitelist
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: tdarr
  authorization:
    defaultAction: Deny
    rules:
      - name: allow-private
        action: Allow
        principal:
          clientCIDRs:
            - 192.168.0.0/16
            - 172.16.0.0/12
